# bau

./: .clang-format  .gitignore  CMakeLists.txt  README.md  environment.yml  fix_format_lnx_x86
.github/workflows/: main.yml
src/bau/cpp/: CMakeLists.txt
src/bau/cpp/_tests/: test_dummy.cpp  test_mass.cpp  test_scalar.cpp
src/bau/cpp/include/bau/: BaseUnit.hpp  CommonBaseUnit.hpp  Dummy.hpp  IUnit.hpp  LengthBaseUnit.hpp  MassBaseUnit.hpp  Scalar.hpp  Unit.hpp
src/bau/cpp/include/bau/traits/: AngleTraits.hpp  CommonTraits.hpp  LengthTraits.hpp  MeasurementTraits.hpp  PowerTraits.hpp  TemperatureTraits.hpp  WeightTraits.hpp
src/bau/cpp/src/: BaseUnit.cpp  CommonBaseUnit.cpp  Dummy.cpp  LengthBaseUnit.cpp  MassBaseUnit.cpp
